PromelaParser.py
# Generated from Promela.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PromelaParser ( Parser ):

    grammarFileName = "Promela.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'define'", "'mtype'", "'='", "'{'", 
                     "','", "'}'", "';'", "'chan'", "'['", "']'", "'of'", 
                     "'bit'", "'bool'", "'byte'", "'short'", "'int'", "'pid'", 
                     "'unsigned'", "'typedef'", "'active'", "'proctype'", 
                     "'('", "')'", "'priority'", "'provided'", "'init'", 
                     "'inline'", "'unless'", "':'", "'xr'", "'xs'", "'skip'", 
                     "'break'", "'goto'", "'if'", "'fi'", "'do'", "'od'", 
                     "'atomic'", "'d_step'", "'assert'", "'printf'", "'printm'", 
                     "'run'", "'select'", "'..'", "'for'", "'!'", "'?'", 
                     "'<'", "'>'", "'eval'", "'.'", "'else'", "'true'", 
                     "'false'", "'_pid'", "'_nr_pr'", "'_last'", "'timeout'", 
                     "'np_'", "'len'", "'empty'", "'nempty'", "'full'", 
                     "'nfull'", "'enabled'", "'pc_value'", "'~'", "'-'", 
                     "'+'", "'*'", "'/'", "'%'", "'&'", "'^'", "'|'", "'!!'", 
                     "'??'", "'++'", "'--'", "'<<'", "'>>'", "'<='", "'>='", 
                     "'=='", "'!='", "'&&'", "'||'", "'->'", "'::'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SORTED_SEND", 
                      "RANDOM_RECV", "INCR", "DECR", "LSHIFT", "RSHIFT", 
                      "LE", "GE", "EQEQ", "NE", "AND", "OR", "ARROW", "COLONS", 
                      "NUMBER", "ID", "STRING", "COMMENT", "LINE_COMMENT", 
                      "WS" ]

    RULE_spec = 0
    RULE_module = 1
    RULE_defineDecl = 2
    RULE_defineBody = 3
    RULE_mtypeDecl = 4
    RULE_chanDecl = 5
    RULE_varDecl = 6
    RULE_varItem = 7
    RULE_typename = 8
    RULE_typedefDecl = 9
    RULE_proctype = 10
    RULE_paramList = 11
    RULE_paramGroup = 12
    RULE_init = 13
    RULE_inlineDecl = 14
    RULE_sequence = 15
    RULE_step = 16
    RULE_xrxsDecl = 17
    RULE_stmt = 18
    RULE_sendStmt = 19
    RULE_receiveStmt = 20
    RULE_recvArgs = 21
    RULE_recvArg = 22
    RULE_assignment = 23
    RULE_varRef = 24
    RULE_argList = 25
    RULE_optionList = 26
    RULE_option = 27
    RULE_expr = 28

    ruleNames =  [ "spec", "module", "defineDecl", "defineBody", "mtypeDecl", 
                   "chanDecl", "varDecl", "varItem", "typename", "typedefDecl", 
                   "proctype", "paramList", "paramGroup", "init", "inlineDecl", 
                   "sequence", "step", "xrxsDecl", "stmt", "sendStmt", "receiveStmt", 
                   "recvArgs", "recvArg", "assignment", "varRef", "argList", 
                   "optionList", "option", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    SORTED_SEND=79
    RANDOM_RECV=80
    INCR=81
    DECR=82
    LSHIFT=83
    RSHIFT=84
    LE=85
    GE=86
    EQEQ=87
    NE=88
    AND=89
    OR=90
    ARROW=91
    COLONS=92
    NUMBER=93
    ID=94
    STRING=95
    COMMENT=96
    LINE_COMMENT=97
    WS=98

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PromelaParser.EOF, 0)

        def module(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.ModuleContext)
            else:
                return self.getTypedRuleContext(PromelaParser.ModuleContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = PromelaParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 411034122) != 0):
                self.state = 58
                self.module()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(PromelaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mtypeDecl(self):
            return self.getTypedRuleContext(PromelaParser.MtypeDeclContext,0)


        def chanDecl(self):
            return self.getTypedRuleContext(PromelaParser.ChanDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(PromelaParser.VarDeclContext,0)


        def typedefDecl(self):
            return self.getTypedRuleContext(PromelaParser.TypedefDeclContext,0)


        def proctype(self):
            return self.getTypedRuleContext(PromelaParser.ProctypeContext,0)


        def init(self):
            return self.getTypedRuleContext(PromelaParser.InitContext,0)


        def inlineDecl(self):
            return self.getTypedRuleContext(PromelaParser.InlineDeclContext,0)


        def defineDecl(self):
            return self.getTypedRuleContext(PromelaParser.DefineDeclContext,0)


        def getRuleIndex(self):
            return PromelaParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = PromelaParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.mtypeDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.chanDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.varDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.typedefDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.proctype()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 71
                self.init()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 72
                self.inlineDecl()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 73
                self.defineDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def defineBody(self):
            return self.getTypedRuleContext(PromelaParser.DefineBodyContext,0)


        def getRuleIndex(self):
            return PromelaParser.RULE_defineDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefineDecl" ):
                listener.enterDefineDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefineDecl" ):
                listener.exitDefineDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineDecl" ):
                return visitor.visitDefineDecl(self)
            else:
                return visitor.visitChildren(self)




    def defineDecl(self):

        localctx = PromelaParser.DefineDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defineDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(PromelaParser.T__0)
            self.state = 77
            self.match(PromelaParser.T__1)
            self.state = 78
            self.match(PromelaParser.ID)
            self.state = 79
            self.defineBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PromelaParser.ExprContext,0)


        def getRuleIndex(self):
            return PromelaParser.RULE_defineBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefineBody" ):
                listener.enterDefineBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefineBody" ):
                listener.exitDefineBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineBody" ):
                return visitor.visitDefineBody(self)
            else:
                return visitor.visitChildren(self)




    def defineBody(self):

        localctx = PromelaParser.DefineBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_defineBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MtypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PromelaParser.ID)
            else:
                return self.getToken(PromelaParser.ID, i)

        def getRuleIndex(self):
            return PromelaParser.RULE_mtypeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMtypeDecl" ):
                listener.enterMtypeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMtypeDecl" ):
                listener.exitMtypeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMtypeDecl" ):
                return visitor.visitMtypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def mtypeDecl(self):

        localctx = PromelaParser.MtypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mtypeDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PromelaParser.T__2)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 84
                self.match(PromelaParser.T__3)
                self.state = 85
                self.match(PromelaParser.T__4)
                self.state = 86
                self.match(PromelaParser.ID)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 87
                    self.match(PromelaParser.T__5)
                    self.state = 88
                    self.match(PromelaParser.ID)
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 94
                self.match(PromelaParser.T__6)


            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 97
                self.match(PromelaParser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChanDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PromelaParser.ExprContext,0)


        def typename(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.TypenameContext)
            else:
                return self.getTypedRuleContext(PromelaParser.TypenameContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_chanDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChanDecl" ):
                listener.enterChanDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChanDecl" ):
                listener.exitChanDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChanDecl" ):
                return visitor.visitChanDecl(self)
            else:
                return visitor.visitChildren(self)




    def chanDecl(self):

        localctx = PromelaParser.ChanDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_chanDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(PromelaParser.T__8)
            self.state = 101
            self.match(PromelaParser.ID)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 102
                self.match(PromelaParser.T__3)
                self.state = 103
                self.match(PromelaParser.T__9)
                self.state = 104
                self.expr(0)
                self.state = 105
                self.match(PromelaParser.T__10)
                self.state = 106
                self.match(PromelaParser.T__11)
                self.state = 107
                self.match(PromelaParser.T__4)
                self.state = 108
                self.typename()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 109
                    self.match(PromelaParser.T__5)
                    self.state = 110
                    self.typename()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 116
                self.match(PromelaParser.T__6)


            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 120
                self.match(PromelaParser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typename(self):
            return self.getTypedRuleContext(PromelaParser.TypenameContext,0)


        def varItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.VarItemContext)
            else:
                return self.getTypedRuleContext(PromelaParser.VarItemContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = PromelaParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.typename()
            self.state = 124
            self.varItem()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 125
                self.match(PromelaParser.T__5)
                self.state = 126
                self.varItem()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 132
                self.match(PromelaParser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.ExprContext)
            else:
                return self.getTypedRuleContext(PromelaParser.ExprContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_varItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarItem" ):
                listener.enterVarItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarItem" ):
                listener.exitVarItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarItem" ):
                return visitor.visitVarItem(self)
            else:
                return visitor.visitChildren(self)




    def varItem(self):

        localctx = PromelaParser.VarItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(PromelaParser.ID)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 136
                self.match(PromelaParser.T__9)
                self.state = 137
                self.expr(0)
                self.state = 138
                self.match(PromelaParser.T__10)


            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 142
                self.match(PromelaParser.T__3)
                self.state = 143
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PromelaParser.RULE_typename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypename" ):
                listener.enterTypename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypename" ):
                listener.exitTypename(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypename" ):
                return visitor.visitTypename(self)
            else:
                return visitor.visitChildren(self)




    def typename(self):

        localctx = PromelaParser.TypenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typename)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1040904) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(PromelaParser.VarDeclContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_typedefDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedefDecl" ):
                listener.enterTypedefDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedefDecl" ):
                listener.exitTypedefDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedefDecl" ):
                return visitor.visitTypedefDecl(self)
            else:
                return visitor.visitChildren(self)




    def typedefDecl(self):

        localctx = PromelaParser.TypedefDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typedefDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(PromelaParser.T__19)
            self.state = 149
            self.match(PromelaParser.ID)
            self.state = 150
            self.match(PromelaParser.T__4)
            self.state = 152 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 151
                self.varDecl()
                self.state = 154 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1040904) != 0)):
                    break

            self.state = 156
            self.match(PromelaParser.T__6)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 157
                self.match(PromelaParser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def sequence(self):
            return self.getTypedRuleContext(PromelaParser.SequenceContext,0)


        def paramList(self):
            return self.getTypedRuleContext(PromelaParser.ParamListContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.ExprContext)
            else:
                return self.getTypedRuleContext(PromelaParser.ExprContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_proctype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProctype" ):
                listener.enterProctype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProctype" ):
                listener.exitProctype(self)

        def accept(self, visitor:ParseTreeVisitor):
